Add DesktopManager to split dekstop/cloud code Move runProcess and killProcess to DesktopManager Change runProcess to runProgram Change killProcess to killProgram Change Runtime to ProcessBuilder/Process Change to platform neutral file paths(?) Change programDirectory.txt to programPath.txt